# agent-harness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
agent_harness/: __init__.py
agent_harness/core/: __init__.py  agent.py  credentials.py  errors.py  events.py  filesystem.py  graph.py  history.py  history_llm.py  hooks.py  loop.py  loop_helpers.py  mcp.py  memory.py  models.py  run_context.py  run_state.py  sandbox.py  skills.py  subagents.py  tools.py  toolsets.py
agent_harness/extras/: __init__.py  checkpoints.py  ignoreset.py  mentions.py  reminders.py
agent_harness/long_term/: __init__.py  memdir.py  vector.py
agent_harness/providers/: anthropic.py  google.py  openai.py
agent_harness/sandboxes/: __init__.py  fly.py  inprocess.py  modal.py
agent_harness/sessions/: __init__.py  inmemory.py  redis.py  sqlite.py
agent_harness/tracing/: __init__.py  console.py  otel.py
agent_harness/usage/: __init__.py  counting.py
scripts/: e2e_real.py
tests/: conftest.py  fakes.py
tests/core/: test_loop_reminders.py
tests/extras/: test_reminders.py
tests/unit/: test_agent.py  test_agent_as_tool.py  test_anthropic_provider.py  test_checkpoints.py  test_console_tracing.py  test_credentials.py  test_errors.py  test_events.py  test_fakes.py  test_filesystem_tools.py  test_fly_sandbox.py  test_google_provider.py  test_graph_adapter.py  test_history_builtins.py  test_history_llm.py  test_history_protocol.py  test_hook_executors.py  test_hooks.py  test_ignoreset.py  test_inmemory_session.py  test_inprocess_sandbox.py  test_loop_decidenext.py  test_loop_integration.py  test_loop_modelrequest.py  test_loop_prepareturn.py  test_loop_tooldispatch.py  test_mcp_server.py  test_mcp_transports.py  test_memdir.py  test_memory_protocols.py  test_mentions.py  test_modal_sandbox.py  test_models.py  test_openai_provider.py  test_otel.py  test_otel_skeleton.py  test_redis_session.py  test_run_state.py  test_sandbox_protocol.py  test_skills.py  (+8 more)
