[project]
name = "agent-harness"
version = "0.0.1"
description = "A simple-but-complete Python agent harness"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Adam Bossy", email = "adam@spara.co" }]
dependencies = [
    "pydantic>=2.10",
    "pydantic-graph>=0.0.20",
    "griffe>=1.5",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
google = ["google-genai>=0.5"]
redis = ["redis>=5.0"]
modal = ["modal>=0.70"]
fly = ["httpx>=0.27"]
otel = ["opentelemetry-api>=1.27", "opentelemetry-sdk>=1.27"]
vector = ["pgvector>=0.3"]
mcp = ["mcp>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_harness"]

# ─── Ruff: formatter + linter ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "C4",           # flake8-comprehensions
    "UP",           # pyupgrade
    "N",            # pep8-naming
    "SIM",          # flake8-simplify
    "RET",          # flake8-return
    "PTH",          # flake8-use-pathlib
    "RUF",          # ruff-specific
]
ignore = [
    "E501",         # line-too-long (the formatter handles wrapping)
    "B008",         # function-call-in-default-argument (common Pydantic pattern)
    "RET504",       # unnecessary-assign-before-return (often clearer with a name)
    "SIM108",       # use-ternary (sometimes if/else is clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B018", "PLR2004"]
"agent_harness/__init__.py" = ["F401"]              # public re-exports
"agent_harness/*/__init__.py" = ["F401"]            # subpackage re-exports

[tool.ruff.lint.isort]
known-first-party = ["agent_harness"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

# ─── mypy: strict type checking project-wide ─────────────────────────────────
[tool.mypy]
python_version = "3.13"
files = ["agent_harness", "tests"]
strict = true
# Explicit (redundant under strict=true, but documents intent):
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
# Show error codes in messages for easier triage / targeted ignores
show_error_codes = true
pretty = true

# Tests may have unannotated fixtures; otherwise still strict.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# Third-party libs without type stubs at v0.0.1:
[[tool.mypy.overrides]]
module = ["modal.*", "pgvector.*", "mcp.*"]
ignore_missing_imports = true

# Optional provider SDKs (anthropic / openai / google-genai) — imported lazily
# inside provider adapters; absence in the dev venv is intentional.
[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "google.*", "google.genai.*"]
ignore_missing_imports = true
